# cabal-dev

./: .gitignore  .travis.yml  FAQ.md  LICENSE  README.md  Setup.hs  TODO.md  cabal-dev.cabal
admin/: bootstrap.hs  cabal-config-boot.in  cabal-config.in
cabal-dev/: cabal.config
releases/: 0.8.md  0.9.md
src/: FakeGhc.hs  GhcPkgCompat.hs  Main.hs  Paths_cabal_dev.hs  RunTests.hs
src/Distribution/Dev/: AddSource.hs  AddSourceFile.hs  AddSourceList.hs  BuildOpts.hs  CabalInstall.hs  Command.hs  Flags.hs  GhcArgs.hs  GhcPkg.hs  Ghci.hs  InitPkgDb.hs  InstallDependencies.hs  InterrogateCabalInstall.hs  InvokeCabal.hs  LocalRepo.hs  Log.hs  MergeCabalConfig.hs  MkRepo.hs  RewriteCabalConfig.hs  Sandbox.hs  Utilities.hs
src/Distribution/Dev/TH/: DeriveCabalCommands.hs
test/: RunTests.hs
