Name:                cabal-dev
Version:             0.1
Synopsis:            Manage projects with several development cabal packages
Description:         Tool for managing development builds of Haskell projects that consist of multiple not-yet-released cabal packagges
-- Description:

License:             BSD3
License-file:        LICENSE
Author:              Josh Hoyt
Maintainer:          j3h@galois.com
Copyright:           2010 Galois, Inc.
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.6
Executable cabal-dev
  HS-Source-Dirs: src
  Main-is: Main.hs
  GHC-Options: -Wall -fforce-recomp

  if impl(ghc >= 6.10)
    Build-depends:
      base == 4.*
  else
    Build-depends:
      base == 3.*

  Build-depends:
    bytestring == 0.9.*,
    Cabal >= 1.6 && < 1.9,
    directory == 1.0.*,
    filepath == 1.1.*,
    process == 1.0.*,
    tar == 0.3.*,
    zlib == 0.5.*

  Other-modules:
    Distribution.Dev.MkRepo,
    Distribution.Dev.Log,
    Distribution.Dev.LocalRepo,
    Distribution.Dev.Command,
    Distribution.Dev.Flags
