Name:                cabal-dev
Version:             0.3.4.1
Synopsis:            Manage sandboxed Haskell build environments

Description:         cabal-dev is a tool for managing development builds of
                     Haskell projects. It supports maintaining sandboxed
                     cabal-install repositories, and sandboxed ghc package
                     databases.
                     .
                     By default, it uses a cabal-dev directory under
                     the current working directory as the sandbox.
                     .
                     For most packages, just use @cabal-dev@ instead of
                     @cabal@, and you will get a sandboxed build that
                     will not install anything (even automatically installed
                     dependencies) into the user or global ghc package
                     databases.
                     .
                     If your build depends on patched or unreleased libraries,
                     you can add them to your sandboxed build environment so
                     they can be installed by @cabal-dev@ or @cabal@. Just run:
                     .
                     > cabal-dev add-source /path/to/source/code
                     .
                     @cabal-dev add-source@ also supports importing tarballs
                     into a local cabal repository.
                     .
                     This tool has been tested with GHC 6.8-6.12.

License:             BSD3
License-file:        LICENSE
Author:              Josh Hoyt
Maintainer:          j3h@galois.com
Copyright:           2010 Galois, Inc.
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2
Data-Files:
  admin/cabal-config.in,
  admin/00-index.tar

Flag no-cabal-dev
  Description: Do not build cabal-dev (just build ghc-pkg-6_8-compat).
               This is useful for bootstrapping on GHC 6.8.
  Default: False

  -- Don't try to flip this flag when looking for a
  -- satisfiable configuration for this package
  Manual: True

Flag build-tests
  Description: Build and install the test executable
  Default: False
  Manual: True

Executable ghc-pkg-6_8-compat
  Main-is: GhcPkgCompat.hs
  Build-Depends:
    base < 5,
    Cabal >=1.2 && < 1.9

  GHC-Options: -Wall
  HS-Source-Dirs: src

Executable cabal-dev-test
  Main-is: RunTests.hs
  GHC-Options: -Wall
  HS-Source-Dirs: src
  if flag(no-cabal-dev) || !flag(build-tests)
    Buildable: False
  else
    if impl(ghc >= 6.10)
      Build-depends:
        base >= 4 && < 5
    else
      Build-depends:
        base >= 3 && < 4

    Build-depends:
      MonadRandom >= 0.1 && < 0.2,
      random >= 1 && < 1.1,
      test-framework >= 0.3 && < 0.4,
      test-framework-hunit >= 0.2,
      HUnit >= 1.2 && <2

Executable cabal-dev
  HS-Source-Dirs: src
  Main-is: Main.hs
  GHC-Options: -Wall

  if flag(no-cabal-dev)
    Buildable: False
  else
    if impl(ghc >= 6.10)
      Build-depends:
        base >= 4 && < 5
    else
      Build-depends:
        base >= 3 && < 4

    Build-depends:
      bytestring >= 0.9 && < 0.10,
      directory >= 1.0 && < 1.1,
      filepath >= 1.1 && < 1.2,
      Cabal >= 1.8 && < 1.9,
      HTTP == 4000.0.9,
      mtl >= 1.1 && < 1.2,
      network >= 2.2 && < 2.3,
      pretty >= 1.0 && < 1.1,
      process >= 1.0 && < 1.1,
      tar >= 0.3 && < 0.4,
      zlib >= 0.5 && < 0.6

  Other-modules:
    Distribution.Dev.AddSource,
    Distribution.Dev.Sandbox,
    Distribution.Dev.Command,
    Distribution.Dev.Flags,
    Distribution.Dev.InvokeCabal,
    Distribution.Dev.InstallDependencies,
    Distribution.Dev.RewriteCabalConfig,
    Distribution.Dev.InitPkgDb
